--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "dev-build": "vite build --watch --mode development",
     "build": "vue-tsc && vite build",
     "preview": "vite preview"
   },
